Criando projeto para trabalhar com o SQLite

--- a/LugaresFavoritos/LugaresFavoritos/Base.lproj/Main.storyboard
+++ b/LugaresFavoritos/LugaresFavoritos/Base.lproj/Main.storyboard
@@ -95,6 +95,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="HvN-XP-ORB"/>
+        <segue reference="IMs-iS-dlR"/>
     </inferredMetricsTieBreakers>
 </document>
